rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x520_2008_SelectedAttributeTypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x520_2008_SelectedAttributeTypes.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 357, column 37]
     │
     │ 
 357 │  (SIZEcollectiveTelephoneNumber ATTRIBUTE ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 358 │    SUBTYPE OF  telephoneNumber
 359 │    COLLECTIVE  TRUE
 360 │    ID          id-at-collectiveTelephoneNumber
 361 │  }
     │
─────╯
