rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x520_2016_PasswordPolicy.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x520_2016_PasswordPolicy.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 109, column 32]
     │
     │ 
 109 │  {userPwd,userPwdHistoryMatch,id-oa-userPwdHistory} ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
     │
─────╯
