rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x520_2019_UpperBounds.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x520_2019_UpperBounds.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod upper_bounds {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " EXPORTS All"]
    #[doc = ""]
    #[doc = "The types and values defined in this module are exported for use in the other ASN.1"]
    #[doc = "modules contained within these Directory Specifications, and for the use of other"]
    #[doc = "applications which will use them to access Directory services. Other applications"]
    #[doc = "may use them for their own purposes, but this will not constrain extensions and"]
    #[doc = "modifications needed to maintain or improve the Directory service."]
    pub static UB_ANSWERBACK: LazyLock<Integer> = LazyLock::new(|| Integer::from(8i128));
    pub static UB_BUSINESS_CATEGORY: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_COMMON_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_CONTENT: LazyLock<Integer> = LazyLock::new(|| Integer::from(32768i128));
    pub static UB_COUNTRY_CODE: LazyLock<Integer> = LazyLock::new(|| Integer::from(4i128));
    pub static UB_DESCRIPTION: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024i128));
    pub static UB_DESTINATION_INDICATOR: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128i128));
    pub static UB_DIRECTORY_STRING_FIRST_COMPONENT_MATCH: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32768i128));
    pub static UB_DOMAIN_LOCAL_ID: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_INTERNATIONAL_ISDN_NUMBER: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(16i128));
    pub static UB_KNOWLEDGE_INFORMATION: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(32768i128));
    pub static UB_LABELED_URI: LazyLock<Integer> = LazyLock::new(|| Integer::from(32768i128));
    pub static UB_LOCALE_CONTEXT_SYNTAX: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128i128));
    pub static UB_LOCALITY_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_MATCH: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_ORGANIZATION_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_ORGANIZATIONAL_UNIT_NAME: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(64i128));
    pub static UB_PHYSICAL_OFFICE_NAME: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(128i128));
    pub static UB_POST_OFFICE_BOX: LazyLock<Integer> = LazyLock::new(|| Integer::from(40i128));
    pub static UB_POSTAL_CODE: LazyLock<Integer> = LazyLock::new(|| Integer::from(40i128));
    pub static UB_POSTAL_LINE: LazyLock<Integer> = LazyLock::new(|| Integer::from(6i128));
    pub static UB_POSTAL_STRING: LazyLock<Integer> = LazyLock::new(|| Integer::from(30i128));
    pub static UB_PRIVACY_MARK_LENGTH: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_PSEUDONYM: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_SASL_MECHANISM: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_SCHEMA: LazyLock<Integer> = LazyLock::new(|| Integer::from(1024i128));
    pub static UB_SEARCH: LazyLock<Integer> = LazyLock::new(|| Integer::from(32768i128));
    pub static UB_SERIAL_NUMBER: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_STATE_NAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_STREET_ADDRESS: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_SURNAME: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_TAG: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_TELEPHONE_NUMBER: LazyLock<Integer> = LazyLock::new(|| Integer::from(32i128));
    pub static UB_TELETEX_TERMINAL_ID: LazyLock<Integer> =
        LazyLock::new(|| Integer::from(1024i128));
    pub static UB_TELEX_NUMBER: LazyLock<Integer> = LazyLock::new(|| Integer::from(14i128));
    pub static UB_TITLE: LazyLock<Integer> = LazyLock::new(|| Integer::from(64i128));
    pub static UB_USER_PASSWORD: LazyLock<Integer> = LazyLock::new(|| Integer::from(128i128));
    pub static UB_X121_ADDRESS: LazyLock<Integer> = LazyLock::new(|| Integer::from(15i128));
}
